<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="activity_social_feed">@string/social_query</string>
  <string name="activity_schedule">Schedule</string>
  <string name="activity_favorites">Favorites</string>
  <string name="event_details">Details</string>
  <string name="missing_prerequisites_action">Fix it</string>

  <string name="experience_level_beginner">beginner</string>
  <string name="experience_level_intermediate">intermediate</string>
  <string name="experience_level_advanced">advanced</string>
  <string name="action_open">Open</string>

  <string name="no_tweets_for_query">No Tweets for %s… yet</string>

  <string name="event_notification_starting_by">By %s</string>
  <string name="event_notification_starting_in">In %s</string>
  <string name="event_notification_count_starting">%d sessions are starting</string>
  <string name="room_event_notification" translatable="false">%s: %s</string>
  <plurals name="event_notification_ticker">
    <item quantity="one">1 session is about to start.</item>
    <item quantity="other">%d sessions are about to start.</item>
  </plurals>

  <string name="bottom_bar_schedule_label">Schedule</string>
  <string name="bottom_bar_favorites_label">Favorites</string>
  <string name="bottom_bar_tweets_label">Tweets</string>
  <string name="bottom_bar_venue_label">Venue Info</string>
  <string name="menu_search">Search</string>
  <string name="menu_voice_search">Voice search</string>
  <string name="menu_clear_query">Clear query</string>
  <string name="no_results">No results for this query</string>
  <string name="start_typing_to_search">Start typing to search</string>
  <string name="speaker_list_title">Speakers</string>
  <string name="talks_list_title">Talks</string>

  <string name="tweet_footer_format" translatable="false">\@%1$s—%2$s</string>
  <string name="tweet_date_format">%1$s at %2$s</string>
  <string name="tweet_date_today">today</string>
  <string name="tweet_date_yesterday">yesterday</string>

  <string name="event_details_body_label_when_text">When</string>
  <string name="event_details_body_label_where_text">Where</string>
  <string name="event_details_body_label_about_text">About</string>

  <string name="menu_speaker_twitter">Twitter profile</string>
  <string name="menu_speaker_website">Personal page</string>

  <string name="settings_label">Settings</string>
  <string name="account_category_label">Account</string>
  <string name="sign_out_title">Sign out</string>
  <string name="sign_in_title">Sign in</string>
  <string name="settings_and_help_title">Settings and help</string>
  <string name="settings_notifications_title">Notifications</string>
  <string name="settings_location_title">Geo-location and beacons</string>
  <string name="settings_location_summary_on">You can participate to the contest.</string>
  <string name="settings_location_summary_off">You cannot participate to the contest.</string>
  <string name="settings_contest_standings_title">Contest progress</string>
  <string name="settings_notifications_about_to_start_title">Upcoming events notification</string>
  <string name="settings_notifications_about_to_start_summary_on">Show notifications for favorite events starting soon</string>
  <string name="settings_notifications_about_to_start_summary_off">Do not show notifications for favorite events starting soon</string>
  <string name="settings_message_signed_out">You have been signed out.</string>
  <string name="about_title">About</string>
  <string name="settings_account_not_signed_in">Not signed in</string>
  <string name="settings_header_not_signed_in">You’re not signed in</string>
  <string name="version_x">Version: %1$s</string>
  <string name="settings_debug_category">Debug</string>
  <string name="settings_open_debug_title">Open debug screen</string>

  <string name="venue_info_label">Information</string>
  <string name="venue_about_label">About the venue</string>
  <string name="venue_map_content_description">Map to the venue</string>

  <string name="prompt_to_sign_in_for_favorites">Get notified about upcoming talks. Your favorite talks are also get synced across all your devices.\n\nTap to sign in.</string>
  <string name="prompt_to_favorite">You have no favorite talks, yet. Find some talk, touch the ♥ button and you are good to go.</string>
  <string name="achievement_unlocked">Achievement Unlocked: The Fast Learner!</string>
  <string name="missing_prerequisites_for_location">Uh oh! Location features will not work with the current devices settings</string>

  <string name="favorites_empty_state_signed_out_blurb">Pick your favorite talks, synced across devices, and get notifications when they’re about to start.</string>
  <string name="favorites_empty_state_signed_out_cta">SIGN IN</string>
  <string name="favorites_empty_state_signed_in_blurb">You haven’t picked any favorites yet.\n\n1️⃣ Find a talk you like.\n2️⃣ Aim for the big ♥ button.\n3️⃣ That’s it. Really.</string>
  <string name="favorites_achievement_fast_learner"><![CDATA[Achievement Unlocked: <b>The Fast Learner</b> 🤓]]></string>
  <string name="favorites_achievement_persevering"><![CDATA[Achievement Unlocked: <b>The harder you try, the luckier you get.</b> Now give it a rest.]]></string>

  <string name="about_label">About</string>
  <string name="about_powered_by">is powered by</string>
  <string name="about_location_powered_by">Location services and contest powered by</string>
  <string name="content_description_nearit" translatable="false">NearIt</string>
  <string name="squanchy" translatable="false">Squanchy</string>
  <string name="squanchy_website" translatable="false">https://squanchy.net</string>
  <string name="about_opensource_blurb">This app is proudly open source and any contribution is welcome.</string>
  <string name="about_fork_me">Fork me on GitHub</string>
  <string name="about_licenses">Open source licenses</string>

  <string name="licenses_label">Open source licenses</string>
  <string name="license_label_template">By %1$s, released under %2$s</string>
  <string name="sign_in_label">Please sign in with your Google account to proceed.</string>
  <string name="sign_in_error_please_retry">Unable to sign you in. Please try again shortly.</string>

  <string name="onboarding_skip_button">SKIP</string>

  <string name="onboarding_location_label">Location</string>
  <string name="onboarding_location_title">Win swag with our sponsors</string>
  <string name="onboarding_location_blurb">Allow the app your location and visit all our sponsors’ booths to win swag 🎁</string>
  <string name="onboarding_location_explanation">We’ll need to ask for access to the device location, and to have the Bluetooth turned on</string>
  <string name="onboarding_location_cta">✨ I like swag! ✨</string>

  <string name="proximity_error_not_opted_in">Sorry, unable to opt in because… you’ve not opted in? If that makes any sense.</string>
  <string name="proximity_error_remote_config_kill_switch">Sorry, the feature has been disabled remotely.</string>
  <string name="proximity_error_permission_denied">We need the location permission to continue.</string>
  <string name="proximity_error_location_denied">We need the location services to be active to continue.</string>
  <string name="proximity_error_bluetooth_denied">We need the Bluetooth to be active to continue.</string>
  <string name="proximity_error_location_failed">Unable to verify location settings for the device.</string>
  <string name="proximity_error_google_client_connection">Unable to verify location settings for the device. Please try again shortly.</string>

  <string name="routing_sign_in_unexpected_error">Something went very wrong while starting Squanchy, sorry.</string>

  <string name="first_start_with_no_network_label">Not so fast!</string>
  <string name="first_start_with_no_network_network_connected">Yay network is back! 🎉</string>
  <string name="first_start_with_no_network_title">Not so fast!</string>
  <string name="first_start_with_no_network_blurb">Unfortunately, the first time you open this app you will need to be connected to the internet.</string>
  <string name="first_start_with_no_network_cta">Go ahead, connect to a network. I’ll be waiting.</string>
  <string name="first_start_with_no_network_cancel_button">You know what, nevermind</string>

  <string name="contest_label">Contest</string>
  <string name="contest_title">Visit our sponsors and win</string>
  <string name="contest_blurb">Check in at all of our sponsors’ booths and win cool swag!</string>
  <plurals name="contest_status_missing_sponsors">
    <item quantity="one">Just one sponsor left to visit!</item>
    <item quantity="other">%1$d sponsors left to visit</item>
  </plurals>
  <string name="contest_completed">You got all the sponsors!\nVisit the Synesthesia booth to claim your swag 🎁</string>

</resources>
